Try to fix layout bug

--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -46,7 +46,7 @@
 
 @media (max-width: 767px) {
   .welcome-teaser {
-    padding: 0% 5% 15% 5%;
+    padding: 10% 5% 15% 5%;
   }
 }
 
